--- a/SafeClient/Properties/Resources.resx
+++ b/SafeClient/Properties/Resources.resx
@@ -184,4 +184,7 @@
   <data name="led-gray" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\led-green1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="lmz" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lmz.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
