--- a/SafeClient/Properties/Resources.resx
+++ b/SafeClient/Properties/Resources.resx
@@ -187,4 +187,10 @@
   <data name="lmz" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lmz.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hygrometer_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hygrometer-icon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="temperature_ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\temperature-ico.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
