--- a/SafeClient/Properties/Resources.resx
+++ b/SafeClient/Properties/Resources.resx
@@ -193,4 +193,7 @@
   <data name="temperature_ico" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\temperature-ico.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="led-orange" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\led-red1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
