--- a/SafeClient/Properties/Resources.resx
+++ b/SafeClient/Properties/Resources.resx
@@ -211,4 +211,13 @@
   <data name="icons8_приборная_панель_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-приборная-панель-64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AppIcon2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-камера-видеонаблюдения-96.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8_камера_видеонаблюдения_96" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-камера-видеонаблюдения-96.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="icons8_приборная_панель_96" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons8-приборная-панель-96.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
